// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`comments: buildRangeDecorationSelectionsFromComments allows something to be bolded before the range 1`] = `
Array [
  Object {
    "anchor": Object {
      "offset": 1,
      "path": Array [
        Object {
          "_key": "6222e4072b6e",
        },
        "children",
        Object {
          "_key": "5d176cf77466",
        },
      ],
    },
    "focus": Object {
      "offset": 6,
      "path": Array [
        Object {
          "_key": "6222e4072b6e",
        },
        "children",
        Object {
          "_key": "5d176cf77466",
        },
      ],
    },
  },
]
`;

exports[`comments: buildRangeDecorationSelectionsFromComments allows something to be bolded inside and outside of the range 1`] = `
Array [
  Object {
    "anchor": Object {
      "offset": 3,
      "path": Array [
        Object {
          "_key": "6222e4072b6e",
        },
        "children",
        Object {
          "_key": "897d8881c889",
        },
      ],
    },
    "focus": Object {
      "offset": 8,
      "path": Array [
        Object {
          "_key": "6222e4072b6e",
        },
        "children",
        Object {
          "_key": "897d8881c889",
        },
      ],
    },
  },
]
`;

exports[`comments: buildRangeDecorationSelectionsFromComments allows something to be bolded inside the range 1`] = `
Array [
  Object {
    "anchor": Object {
      "offset": 6,
      "path": Array [
        Object {
          "_key": "6222e4072b6e",
        },
        "children",
        Object {
          "_key": "9d9c95878a6e0",
        },
      ],
    },
    "focus": Object {
      "offset": 11,
      "path": Array [
        Object {
          "_key": "6222e4072b6e",
        },
        "children",
        Object {
          "_key": "9d9c95878a6e0",
        },
      ],
    },
  },
]
`;

exports[`comments: buildRangeDecorationSelectionsFromComments creates initial ranges 1`] = `
Array [
  Object {
    "anchor": Object {
      "offset": 6,
      "path": Array [
        Object {
          "_key": "6222e4072b6e",
        },
        "children",
        Object {
          "_key": "9d9c95878a6e0",
        },
      ],
    },
    "focus": Object {
      "offset": 11,
      "path": Array [
        Object {
          "_key": "6222e4072b6e",
        },
        "children",
        Object {
          "_key": "9d9c95878a6e0",
        },
      ],
    },
  },
]
`;
